--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,16 @@ html {
   font-family: 'Space Mono', monospace;
 }
 body {
+  width: 100%;
+  height: 100vh;
   background-color: var(--light-grayish-cyan);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.App{
+  text-align: center;
+}
+.App h1 {
+  
 }
