--- a/src/components/css/TipButton.css
+++ b/src/components/css/TipButton.css
@@ -13,7 +13,7 @@
   background-color: var(--light-grayish-cyan);
   color: var(--very-dark-cyan);
 }
-.tip__button:active {
+.tip__button.active {
   background-color: var(--strong-cyan);
   color: var(--very-dark-cyan);
 }
