--- a/src/components/css/TipButton.css
+++ b/src/components/css/TipButton.css
@@ -13,6 +13,9 @@
   background-color: var(--light-grayish-cyan);
   color: var(--very-dark-cyan);
 }
+.tip__button:disabled {
+  opacity: .1;
+}
 .tip__button.active {
   background-color: var(--strong-cyan);
   color: var(--very-dark-cyan);
