--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,11 @@ body {
   border-radius: 20px;
   padding: 30px;
 }
+
+@media (max-width: 750px) {
+  .App .grid__container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+}
