--- a/src/components/css/SelectTipButtons.css
+++ b/src/components/css/SelectTipButtons.css
@@ -31,3 +31,10 @@
   text-align: center;
   font-size: 2rem;
 }
+
+@media (max-width: 750px) {
+  .select-tip-buttons__container div {
+    grid-template-columns: 1fr 1fr;
+  }
+
+}
